--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -53,18 +53,34 @@
 
 - name: Vault server configuration
   template: src=vault_main.hcl.j2 dest={{ vault_config_path }}/vault_main.hcl
+  
+  
+# determine init system is in use
+- name: detect sysv init system
+  set_fact: service_type=sysv
+  when: ansible_distribution in ['RedHat', 'CentOS', 'ScientificLinux'] and (ansible_distribution_version|version_compare('6', '>=') and ansible_distribution_version|version_compare('7', '<'))
+- name: detect systemd init system
+  set_fact: service_type=systemd
+  when: (ansible_distribution in ['RedHat', 'CentOS', 'ScientificLinux'] and (ansible_distribution_version|version_compare('7', '>=') and ansible_distribution_version|version_compare('8', '<'))) or ansible_distribution == 'Fedora' or (ansible_distribution == 'Ubuntu' and ansible_distribution_version|version_compare('15.04', '>=')) or (ansible_distribution == 'Debian' and ansible_distribution_version|version_compare('8', '>=')) or ansible_os_family == 'Suse'
+- name: detect upstart init system
+  set_fact: service_type=upstart
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version|version_compare('15.04', '<')
 
 - name: SYSV init script
   template: src=vault_sysvinit.j2 dest=/etc/init.d/vault owner=root group=root mode=755
-  when: not ansible_distribution == "Debian"
+  when: service_type == "sysv"
 
 - name: Debian init script
   template: src=vault_debian.init.j2 dest=/etc/init.d/vault owner=root group=root mode=755
-  when: ansible_distribution == "Debian" and ansible_distribution_major_version|int <= 7
+  when: service_type == "sysv" and ansible_distribution == 'Debian'
+
+- name: upstart script
+  template: src=vault_upstart.service.j2 dest=/lib/systemd/system/vault.service owner=root group=root mode=644
+  when: service_type == "upstart
 
 - name: systemd script
   template: src=vault_systemd.service.j2 dest=/lib/systemd/system/vault.service owner=root group=root mode=644
-  when: ansible_distribution_major_version|int >= 7
+  when: service_type == "systemd"
 
 - name: Start Vault
   service: name=vault state=started enabled=yes
